--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 100%;
             height: 100%;
             /* Ruta local a la imagen de fondo */
-            background-image: url('images/fondo-pantalla.jpg'); 
+            background-image: url('./images/fondo-pantalla.jpg'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -140,7 +140,7 @@
 <body>
     <div id="background-image-container"></div>
     <div class="container">
-        <img src="orgullosamente-conalep-logo-png_seeklogo-289552.png" alt="Logo CONALEP" class="logo" onerror="console.error('Error al cargar el logo. Asegúrate de que orgullosamente-conalep-logo-png_seeklogo-289552.png esté en la misma carpeta que attendance_app.html o que la ruta sea correcta.');">
+        <img src="./images/orgullosamente-conalep-logo-png_seeklogo-289552.png" alt="Logo CONALEP" class="logo" onerror="console.error('Error al cargar el logo. Asegúrate de que orgullosamente-conalep-logo-png_seeklogo-289552.png esté en la misma carpeta que attendance_app.html o que la ruta sea correcta.');">
         <h1 class="text-5xl font-bold text-green-600 text-center pr-40">SISCO (Sistema de Identificación Segura CONALEP)</h1>
         <p class="text-2xl font-bold text-gray-600 text-center -mt-4">PLANTEL CONALEP NAVOLATO</p>
         <div id="login-container">
